--- a/frontend/src/style/buttons.scss
+++ b/frontend/src/style/buttons.scss
@@ -3,6 +3,8 @@ $button-hover-color: rgb(203, 240, 253);
 
 .button {
     background-color:$button-color;
+    width: 100%;
+    max-width: 10%;
     margin-left: 1%;
     margin-right: 1%;
     padding: 1%;
@@ -12,13 +14,12 @@ $button-hover-color: rgb(203, 240, 253);
     font-weight: bold;
     display: flex;
     justify-content: center;
-    font-size: 40%;
+    font-size: 50%;
 }
 
 .button:hover {
     background-color: $button-hover-color;
-    box-shadow: 2px 2px 2px 2px;
-    font-size: 45%;
+    font-size: 60%;
 }
 
 .shiftButton {
