--- a/frontend/src/style/buttons.scss
+++ b/frontend/src/style/buttons.scss
@@ -1,47 +1,66 @@
-$button-color: lightblue;
-$button-hover-color: rgb(203, 240, 253);
+@import "Variables";
+
 
 .button {
     background-color:$button-color;
-    width: 100%;
-    max-width: 10%;
-    margin-left: 1%;
-    margin-right: 1%;
-    padding: 1%;
+    padding: 8%;
     border-radius: 5px;
     box-shadow: 1px 1px;
     cursor: pointer;
     font-weight: bold;
     display: flex;
     justify-content: center;
-    font-size: 50%;
+    border-color: black;
+    box-shadow: 2px 2px 2px 2px;
+    font-size: 80%;
+}
+
+.categoryButton {
+
 }
 
 .button:hover {
     background-color: $button-hover-color;
-    font-size: 60%;
+    box-shadow: 2px 2px 0px 0px;
 }
 
 .shiftButton {
     background-color:white;
     margin: auto;
-    padding: 1%;
-    border-radius: 5px;
-    box-shadow: 2px 2px 2px 2px;
-    cursor: pointer;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    padding: 4%;
+    padding-left: 5%;
+    padding-right: 5%;
     font-weight: bold;
-    display: flex;
-    justify-content: center;
-    width: 10%;
-    font-size: 60%
 }
 
 .shiftButton:hover {
     box-shadow: 3px 3px 3px 3px;
-    font-size: 65%;
 }
 
-.shiftButtons {
-    display:flex;
-    justify-content: center;
+.shiftButtons{
+    display: flex;
+    flex-direction: row;
+}
+
+// NON-MOBILE
+// -------------------------------
+@media(min-width: 900px) {
+
+    // .button {
+    //     padding: 1%;
+    //     padding-left: 2%;
+    //     padding-right: 2%;
+    //     font-size: 60%;
+    // }
+
+    .shiftButton {
+        margin-top: 2%;
+        margin-bottom: 0%;
+        padding: 2%;
+        padding-right: 3%;
+        padding-left: 3%;
+    }
+
 }
