--- a/frontend/src/style/services/settingsSelection/general.scss
+++ b/frontend/src/style/services/settingsSelection/general.scss
@@ -1,57 +1,24 @@
 
-.form {
-    background-color: white;
-    border-radius: 20px;
-    color: black;
-    padding: 2%;
-    margin: 2%;
-    box-shadow: 4px 4px 4px 4px;
+.settingsSelection {
+    
 }
 
-.formSection {
+.settingsSelectionSection {
+
+}
+
+.settingsSelectionSectionTitle {
     display: flex;
-    flex-direction: row;
-    padding-top: 2%;
-    padding-bottom: 2%;
-}
-.formCategory {
-    color: grey;
-    font-size: 70%;
-    padding-left: 1%;
-    padding-right: 1%;
+    justify-content: left;
+    margin-left: 5%;
+    margin-bottom: 1%;
 }
 
-.sectionTitle  {
-    width: 25%;
+.selectionFormButton {
+
 }
 
-.sectionContent {
+.rowItem {
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 75%;
-    padding-left: 2%;
-    padding-right: 2%;
-}
-
-.formInput {
-    font-size: 60%;
-    display: flex;
-    flex-direction: row;
     justify-content: center;
-    align-items: center;
-    padding: 1%;
-    width: 100%;
-}
-
-.formInputLabel {
-    padding-left: 1%;
-    padding-right: 1%;
-}
-
-.formInputInput {
-
-}
-
-.weightForm {
 }
