--- a/frontend/src/style/Home.scss
+++ b/frontend/src/style/Home.scss
@@ -9,7 +9,11 @@
     font-size: 250%;
     letter-spacing: 2px;
     justify-content: space-around;
-    margin-bottom: -10%;
+    margin-bottom: -15%;
+}
+
+.sub-title {
+    font-style: italic;
 }
 
 .AI {
@@ -18,7 +22,7 @@
 }
 
 .intro {
-    padding-bottom: 10%;
+    padding: 5%;
     justify-content: space-around;
 }
 
