working frontend etl

--- a/frontend/src/style/services/dashboard/dashboard.scss
+++ b/frontend/src/style/services/dashboard/dashboard.scss
@@ -1,21 +1,28 @@
 @import 'toolbar';
+@import 'functional';
 
 .dashboard {
     display: flex;
     flex-direction: column;
 }
 
-.dashboard-title {
+.dashboard-view-title {
     margin-bottom: 5%;
     margin-top: 5%;
 }
 
-.dashboard-content {
+.dashboard-view-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    overflow: auto;
 }
 
 .dashboard-table {
-    
+    width: 100%;
+    // margin:
+}
+
+.table-row {
+    overflow-x: auto;
 }
