--- a/frontend/src/style/Tables.scss
+++ b/frontend/src/style/Tables.scss
@@ -1,12 +1,18 @@
 
-.standard-table{
+.standard-table {
     background-color: white;
     color: black;
-    border-radius: 1%;
-    margin: 2%;
+    // border-radius: 1%;
+    padding: 2%;
+    margin: 3%;
+    // position: relative;
+    border-collapse: collapse;
+    font-size: 70%;
 }
 
-.row-headers{}
+.table-column-headers{
+    
+}
 
 .table-row:hover {
     background-color: lightgrey;
@@ -16,9 +22,23 @@
     background-color: grey;
 }
 
-.table-header:hover{
+.table-column-header:hover{
     background-color: ghostwhite;
     cursor: pointer;
+}
+
+.table-column-headers {
+
+}
+
+th.sticky {
+    position: sticky;
+    top: 0;
+}
+
+.table-column {
+    overflow: visible;
+    padding: 5px;
 }
 
 .table-data{
@@ -27,6 +47,7 @@
     
 }
 
-.table-header{
-    padding: 5%;
+.table-column-header{
+    // padding-left: 1%;
+    // padding-right: 1%;
 }
