--- a/frontend/src/style/services/dashboard/toolbar.scss
+++ b/frontend/src/style/services/dashboard/toolbar.scss
@@ -23,3 +23,10 @@
     display: flex;
     flex-direction: column;
 }
+
+.column-filter-display {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
